  provided.

- Added callback for `ptr_R_ResetConsole`.

- :mod:`pandas` :class:`Categorical` objects are automatically handled
  in the pandas converter.

- The translation of R symbols into Python symbols used in `importr` and
  underlying classes and methods can be customized with a callback.
  The default translation turning `.` into `_` is `default_symbol_r2python`. 

Changes
-------

- The automatic name translation from R to Python used in `importr` is
  now slightly more complex. It will not only translate `.` to `_` but
  should a conflict arise from the existence in R of both the `.` and `_`
  versions the `.` version will be appended a `_` (in accordance with
  :pep:0008). The change was discussed in issue #274).

Bugs fixed
----------

- The evaluation of R code through R's C-level function `tryEval`
  caused console output whenever an error occurred. Moving to
  the seemingly experimental `tryEvalSilent` makes evaluations less
  verbose.

- Multiple plots in one ipython cell (pull request #44)

Release 2.5.7
=============

- `simplegeneric` was moved of ipython 4.0.0 (pull request #43)


Release 2.5.6
=============

Bugs fixed
----------

- Detection of the R version during setup on Win8 (issues #255 and #258)

- Segmentation fault when converting :mod:`pandas` :class:`Series` with
  elements of type object (issue #264)

- The default converter from Python (non-rpy2) objects to rinterface-level
  objects was producing robjects-level objects whenever the input was of
  type :class:`list` (discovered while fixing issue #264)

- Implemented suggested fix for issue with unlinking files on Windows
  (issue #191)

- Testing rpy2 in the absence of ipython no longer stops with an error
  (issue #266)


Release 2.5.5
=============

Bugs fixed
----------

- Crash (segfault) when querying an R object in an R environment triggers an
  error (symbol exists, but associated values resolves to an error - issue #251)
